login support, markdown parsing, lots of backend changes

--- a/src/main/resources/html/index.html
+++ b/src/main/resources/html/index.html
@@ -8,11 +8,11 @@
 
 
 <body>
-$embed{"src": "html/header.html"}
+$const:embed{"src": "html/header.html"}
 
 <div id="content" class="outlet">
     <h1>Server Started</h1>
-    <h2>Port: $port</h2>
+    <h2>Port: $const:server.port</h2>
 
     <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
     <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
